[project]
name = "perplexity-polza-mcp-server"
version = "0.1.0"
description = "An MCP server for Perplexity models through the Polza.ai chat API"
authors = [
    { name = "Ivan Khokholkov" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "perplexity", "polza", "fastmcp", "claude", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.28.1",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.4.2",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/ivanantigravity-lgtm/perplexity-polza-mcp-server"
Repository = "https://github.com/ivanantigravity-lgtm/perplexity-polza-mcp-server.git"
Documentation = "https://github.com/ivanantigravity-lgtm/perplexity-polza-mcp-server#readme"
"Bug Tracker" = "https://github.com/ivanantigravity-lgtm/perplexity-polza-mcp-server/issues"

[project.scripts]
perplexity-polza-mcp-server = "perplexity_polza_mcp_server.server:main"

[project.entry-points.fastmcp]
perplexity-polza-mcp-server = "perplexity_polza_mcp_server.server:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perplexity_polza_mcp_server"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
